# Chickenmaster2

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.web  GAME_LOGIC_FLOWCHART.md  GAME_MECHANICS.md  IMPLEMENTATION_COMPLETION.md  README.md  README_GAME_RULES.md  RECOVERY_REPORT.md  TEMPLATE_GUIDE.md  TODO.md  UI_SAMPLE.md  UNIMPLEMENTED_CHECK.md  docker-compose.yml  init.sh  pyproject.toml  requirements.txt  test_action_service.py  test_ai_analysis_cache.py  test_ai_service_optimized.py  test_ports.py  test_repository.py
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: citation-tracer.agent.md  code-generator-gpt-5-2.agent.md  code-generator.agent.md  code-quality-reviewer.agent.md  core-optimizer.agent.md  doc-reviewer.agent.md  doc-writer.agent.md  experience-curator.agent.md  fixer.agent.md  idea-generator-claude.agent.md  idea-generator-gemini.agent.md  idea-generator-gpt.agent.md  math-reviewer.agent.md  orchestrator.agent.md  planner-claude.agent.md  planner-gemini.agent.md  planner-gpt.agent.md  qa-regression-sentinel.agent.md  research-claude.agent.md  research-gemini.agent.md  research-gpt.agent.md  rubric-verifier.agent.md  validator.agent.md  (+1 more)
configs/: accelerate_multi_gpu.yaml  accelerate_single_gpu.yaml  agent_policy.yaml  citation_tracer_default.yaml  default.yaml
data/: events.csv  events_format.md
documents/: AGENT_MANUAL.md  CONTRIBUTING.md  model_characteristics.md
results/: .gitkeep
src/: interactive_main.py  main.py  simple_main.py
tests/: test_domain_models.py
tools/: __init__.py  evaluation_analysis.py
web/: app.py  config.py  main.py
주말농장/: .gitkeep
(+173 files in other folders)
